	  NSH command ifconfig over Telnet.  In that case the function netdev_foreach
	  takes the network device semaphore, but so does the telnet logic causing
	  the deadlock.
	* arch/arm/src/stm32/stm32_pm*.c: Add basic STM32 power management logic
	  that will eventually be used to implement low power states.
	* arch/arm/src/stm32/stm32f*0xx_rcc.c:  In order to use CAN2, both CAN1 and
	  CAN2 clocking must be enabled.
	* arch/mips/src/pic32mx/picm32mx-usbdev.c:  Several stall-related fixes so that
	  the USB device driver can used the the mass storage class (which does a LOT
	  of stalling as part of its normal protocol).  The PIC32 USB Mass Storage
	  device is, however, still non-functional when debug is OFF.
	* include/nuttx/fs: Move all file-system related files from include/nuttx to
	  include/nuttx/fs.
	* include/nuttx/serial: Move all serial-driver related files from include/nuttx to
	  include/nuttx/serial.
	* include/nuttx/clock.h and sched/clock_initialize.c:  Add a new OS interface
	  called clock_sychronize() that can be used to re-synchronize the NuttX
	  system time with a hardware RTC.  This function is called normally at power
	  up but may also need to be called when recovering from certain low-power
	  usage states where the system time is no longer accurate.
	* arch/arm/src/calypso and arch/arm/include/calypso: Support for the TI "Calypso"
	  phone processor. Contributed by Denis Carilki and includes the work of Denis,
	  Alan Carvalho de Assis, and Stefan Richter.
	* configs/compal_e88 and configs/compal_e99:  Support for Compal e88 and e99 phones
	  Contributed by Denis Carilki and includes the work of Denis, Alan Carvalho de
	  Assis, and Stefan Richter.
	* arch/arm/src/lpc17xx: Several fixes for error that have crept in for the LPC17xx
	  DAC.  Contriburted by by Lzzy.
	* graphics/nxconsole:  Add a character driver that can be used as a console output
	  device for text output (still under development on initial check-in).