@@ -458,7 +458,7 @@ CONFIG_NX_MXCLIENTMSGS=16
 CONFIG_NXCONSOLE=n
 CONFIG_NXCONSOLE_BPP=32
 # CONFIG_NXCONSOLE_NOGETRUN
-# CONFIG_NXCONSOLE_MXCHARS
+CONFIG_NXCONSOLE_MXCHARS=256
 # CONFIG_NXCONSOLE_FONTCACHE
 # CONFIG_NXCONSOLE_CACHESIZE
 # CONFIG_NXCONSOLE_LINESEPARATION
